--- a/INFT6303_TeamD_Project/INFT6303_TeamD_Project.csproj
+++ b/INFT6303_TeamD_Project/INFT6303_TeamD_Project.csproj
@@ -67,6 +67,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Feedback.mdf" />
+    <Content Include="App_Data\Feedback_log.ldf">
+      <DependentUpon>Feedback.mdf</DependentUpon>
+    </Content>
     <Content Include="Global.asax" />
     <Content Include="Login_page.aspx" />
     <Content Include="Web.config" />
@@ -102,7 +106,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
