--- a/INFT6303_TeamD_Project/Web.config
+++ b/INFT6303_TeamD_Project/Web.config
@@ -4,6 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+		<add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ClassRegistration.mdf;Integrated Security=True"
+		 providerName="System.Data.SqlClient" />
+	</connectionStrings>
 	<appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
   </appSettings>
