--- a/INFT6303_TeamD_Project/INFT6303_TeamD_Project.csproj
+++ b/INFT6303_TeamD_Project/INFT6303_TeamD_Project.csproj
@@ -73,6 +73,7 @@
     </Content>
     <Content Include="Global.asax" />
     <Content Include="Login_page.aspx" />
+    <Content Include="Registration.aspx" />
     <Content Include="Web.config" />
     <Content Include="WebForm1.aspx" />
   </ItemGroup>
@@ -88,6 +89,13 @@
       <DependentUpon>Login_page.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Registration.aspx.cs">
+      <DependentUpon>Registration.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Registration.aspx.designer.cs">
+      <DependentUpon>Registration.aspx</DependentUpon>
+    </Compile>
     <Compile Include="WebForm1.aspx.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
