--- a/INFT6303_TeamD_Project/INFT6303_TeamD_Project.csproj
+++ b/INFT6303_TeamD_Project/INFT6303_TeamD_Project.csproj
@@ -72,6 +72,7 @@
     <Content Include="App_Data\Feedback_log.ldf">
       <DependentUpon>Feedback.mdf</DependentUpon>
     </Content>
+    <Content Include="Css\style.css" />
     <Content Include="Faculty.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Login_page.aspx" />
